# multimodal_llm_playground

./: .dockerignore  Dockerfile  README.md  pyproject.toml  run.py
.devcontainer/: Dockerfile.devcontainer  compose.yml  devcontainer.env  devcontainer.json  init.sh
api/: __init__.py  app.py
api/config/: settings.py
api/controller/: __init__.py  rag_controller.py  status_controller.py
api/helpers/: logger_builder.py
api/models/: __init__.py
api/models/rag/: ConvertMarkdown_Request.py  __init__.py  convertmarkdown_response.py  embedmarkdown_request.py  embedmarkdown_response.py  queryembeddings_request.py  queryembeddings_response.py
api/service/: __init__.py
api/service/common/: count_token.py
api/service/rag/: __init__.py  markdown_service.py
tests/: test_predict.py
