[project]
name = "multimodal-llm-playground"
authors = [
    {name = "Rafael Muñoz González"}
]
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "markitdown[all]==0.1.1",
    "openai==1.100.0",
    "python-dotenv==1.1.1",
    "tiktoken==0.11.0",
    "qdrant-client==1.14.2",
    "rich==14.0.0",
    "fastapi==0.105.0",
    "uvicorn==0.24.0.post1"
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "pre-commit==3.6.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "flake8-pyproject==1.2.3",
]
test = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]